# api-fastapi-jwt-python

./: README.md  pyproject.toml
app/: auth_user.py  depends.py  main.py  routes.py
migrations/versions/: ebde9351edea_add_users_tab.py
